--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,29 @@ python:
   - "2.7"
   - "3.3"
   - "3.4"
+  - "3.5"
+  - "3.6"
   - "pypy"
   - "pypy3"
 env:
-  - DJANGO="Django<1.9"
-  - DJANGO="Django<1.10"
+  - DJANGO="Django~=1.8.0"
+  - DJANGO="Django~=1.9.0"
+  - DJANGO="Django~=1.10.0"
+  - DJANGO="Django~=1.11.0"
 
 matrix:
   exclude:
-    - env: DJANGO="Django<1.10"
+    - env: DJANGO="Django~=1.9.0"
       python: "3.3"
-    - env: DJANGO="Django<1.10"
+    - env: DJANGO="Django~=1.9.0"
+      python: "pypy3"
+    - env: DJANGO="Django~=1.10.0"
+      python: "3.3"
+    - env: DJANGO="Django~=1.10.0"
+      python: "pypy3"
+    - env: DJANGO="Django~=1.11.0"
+      python: "3.3"
+    - env: DJANGO="Django~=1.11.0"
       python: "pypy3"
 
 install:
