--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - DJANGO="Django~=1.9.0"
   - DJANGO="Django~=1.10.0"
   - DJANGO="Django~=1.11.0"
+  - DJANGO="Django~=2.0"
 
 matrix:
   exclude:
@@ -28,6 +29,8 @@ matrix:
       python: "3.3"
     - env: DJANGO="Django~=1.11.0"
       python: "pypy3"
+    - env: DJANGO="Django~=2.0.0"
+      python: "3.3"
 
 install:
   - pip install -q $DJANGO coverage
