--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ matrix:
       python: "2.7"
     - env: DJANGO="Django~=2.0.0"
       python: "3.3"
+    - env: DJANGO="Django~=2.0.0"
+      python: "pypy"
 
 install:
   - pip install -q $DJANGO coverage
